# coursework_6

./: .env.template  README.md  pyproject.toml
app_accounts/: admin.py  apps.py  forms.py  models.py  services.py  urls.py  views.py
app_blog/: views.py
app_logging/: admin.py  apps.py  services.py
app_mailing/: admin.py  apps.py  cronjobs.py  forms.py  models.py  urls.py  views.py
app_mailing/views/: mail_message_view.py  mailing_view.py
config/: settings.py  urls.py  views.py
templates/app_accounts/: reset_password_success.html  user_detail.html  user_edit.html  user_email_verify.html
templates/app_blog/: article_detail.html
templates/app_mailing/: mailing_confirm_delete.html  mailing_detail.html  mailing_form.html  mailing_list.html  mailmessage_detail.html  mailmessage_form.html  mailmessage_list.html
templates/landing/: index.html
templates/shared/: _base.html  _navbar.html  model_confirm_delete.html
