[tool.poetry]
name = "coursework-6"
version = "0.1.0"
description = ""
authors = ["Ильдар Галеев <ildar-galeev92@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "4.2.7"
django-crontab = "^0.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
