[tool.poetry]
name = "coursework-6"
version = "0.1.0"
description = ""
authors = ["Ильдар Галеев <ildar-galeev92@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "4.2.7"
django-crontab = "^0.7.1"
django-bootstrap5 = "^23.4"
django-simple-captcha = "^0.6.0"
redis = "^5.0.1"


[tool.poetry.group.dev.dependencies]
ipython = "^8.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
